--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^4.0.4",
     "handlebars": "^4.7.6",
     "mongoose": "^5.9.18",
+    "multer": "^1.4.2",
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
