--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/multer": "^1.4.3",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "handlebars": "^4.7.6",
     "mongoose": "^5.9.18",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nunjucks": "^3.2.1"
+    "nodemailer": "^6.4.8",
+    "nunjucks": "^3.2.1",
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
